Update Add Known issue's in README.md